build_output.txt
[1/2073] Building CXX object Lagom/Libraries/LibWeb/CMakeFiles/LibWeb.dir/HTML/HTMLScriptElement.cpp.o
FAILED: [code=1] Lagom/Libraries/LibWeb/CMakeFiles/LibWeb.dir/HTML/HTMLScriptElement.cpp.o 
/opt/homebrew/bin/ccache /usr/bin/c++ -DENABLE_COMPILETIME_FORMAT_CHECK -DLibWeb_EXPORTS -DSK_ALLOW_STATIC_GLOBAL_INITIALIZERS=1 -DSK_ASSUME_GL=1 -DSK_CODEC_DECODES_BMP -DSK_CODEC_DECODES_GIF -DSK_CODEC_DECODES_ICO -DSK_CODEC_DECODES_JPEG -DSK_CODEC_DECODES_PNG -DSK_CODEC_DECODES_RAW -DSK_CODEC_DECODES_WBMP -DSK_CODEC_DECODES_WEBP -DSK_ENABLE_API_AVAILABLE -DSK_ENABLE_AVX512_OPTS -DSK_ENABLE_DUMP_GPU -DSK_ENABLE_PRECOMPILE -DSK_FONTMGR_ANDROID_AVAILABLE -DSK_FONTMGR_CORETEXT_AVAILABLE -DSK_FONTMGR_FONTCONFIG_AVAILABLE -DSK_FONTMGR_FREETYPE_DIRECTORY_AVAILABLE -DSK_FONTMGR_FREETYPE_EMBEDDED_AVAILABLE -DSK_FONTMGR_FREETYPE_EMPTY_AVAILABLE -DSK_GAMMA_APPLY_TO_A8 -DSK_GANESH -DSK_GL -DSK_HAS_WUFFS_LIBRARY -DSK_METAL -DSK_SUPPORT_PDF -DSK_TRIVIAL_ABI=[[clang::trivial_abi]] -DSK_TYPEFACE_FACTORY_CORETEXT -DSK_TYPEFACE_FACTORY_FREETYPE -DSK_USE_PERFETTO -DSK_XML -I/Users/lonely/important/ladybird -I/Users/lonely/important/ladybird/Services -I/Users/lonely/important/ladybird/Libraries -I/Users/lonely/important/ladybird/Build/debug/Lagom -I/Users/lonely/important/ladybird/Build/debug/Lagom/Services -I/Users/lonely/important/ladybird/Build/debug/Lagom/Libraries -I/Users/lonely/important/ladybird/Meta/Lagom/../.. -I/Users/lonely/important/ladybird/Meta/Lagom/../../Libraries -I/Users/lonely/important/ladybird/Meta/Lagom/../../Services -I/Users/lonely/important/ladybird/Build/debug -isystem /opt/homebrew/opt/python@3.13/Frameworks/Python.framework/Versions/3.13/include/python3.13 -isystem /Users/lonely/important/ladybird/Build/debug/vcpkg_installed/arm64-osx-dynamic/include -isystem /Users/lonely/important/ladybird/Build/debug/vcpkg_installed/arm64-osx-dynamic/include/skia -isystem /Users/lonely/important/ladybird/Build/debug/vcpkg_installed/arm64-osx-dynamic/include/libxml2 -g -std=c++2b -arch arm64 -isysroot /Applications/Xcode.app/Contents/Developer/Platforms/MacOSX.platform/Developer/SDKs/MacOSX26.0.sdk -mmacosx-version-min=14.0 -fPIC -fcolor-diagnostics -march=native -Wall -Wextra -fno-exceptions -ffp-contract=off -Wcast-qual -Wformat=2 -Wimplicit-fallthrough -Wlogical-op -Wmissing-declarations -Wmissing-field-initializers -Wsuggest-override -Wno-invalid-offsetof -Wno-unknown-warning-option -Wno-unused-command-line-argument -Werror -fconstexpr-steps=16777216 -Wmissing-prototypes -Wno-implicit-const-int-float-conversion -Wno-user-defined-literals -Wno-unqualified-std-cast-call -fstack-protector-strong -fstrict-flex-arrays=2 -Wno-maybe-uninitialized -Wno-shorten-64-to-32 -fsigned-char -ggnu-pubnames -ggdb3 -Og -fvisibility=hidden -MD -MT Lagom/Libraries/LibWeb/CMakeFiles/LibWeb.dir/HTML/HTMLScriptElement.cpp.o -MF Lagom/Libraries/LibWeb/CMakeFiles/LibWeb.dir/HTML/HTMLScriptElement.cpp.o.d -o Lagom/Libraries/LibWeb/CMakeFiles/LibWeb.dir/HTML/HTMLScriptElement.cpp.o -c /Users/lonely/important/ladybird/Libraries/LibWeb/HTML/HTMLScriptElement.cpp
/Users/lonely/important/ladybird/Libraries/LibWeb/HTML/HTMLScriptElement.cpp:527:27: error: use of undeclared identifier 'PythonScript'
  527 |             auto script = PythonScript::create(m_document->url().to_byte_string(), source_text.to_byte_string(), settings_object.realm(), base_url);
      |                           ^
1 error generated.
ninja: build stopped: subcommand failed.
